Time: 4 ms (50.97%), Space: 44.2 MB (5.86%) - LeetHub