@@ -1,35 +1,39 @@
 class Solution {
+    List<List<Integer>> ans = new ArrayList<>();
+    Set<List<Integer>> tmp = new HashSet<>();
     public List<List<Integer>> combinationSum2(int[] candidates, int target) {
-        List<List<Integer>> results = new ArrayList<>();
-        LinkedList<Integer> comb = new LinkedList<>();
-
         Arrays.sort(candidates);
-
-        backtrack(candidates, comb, target, 0, results);
-        return results;
+        backtrack(candidates,target,0,new ArrayList<Integer>(),new HashSet<Integer>(),0);
+        
+        for(List<Integer> combination : tmp){
+            ans.add(combination);
+        }
+        return ans;
     }
-
-    private void backtrack(int[] candidates, LinkedList<Integer> comb,
-                           Integer remain, Integer curr,
-                           List<List<Integer>> results) {
-        if (remain == 0) {
-            // copy the current combination to the final list.
-            results.add(new ArrayList<Integer>(comb));
+    
+    public void backtrack(int[] candidates, int target, int currSum, ArrayList<Integer> currList, HashSet<Integer> set, int index){
+        if(currSum == target){
+            tmp.add(new ArrayList<>(currList));
             return;
         }
-
-        for (int nextCurr = curr; nextCurr < candidates.length; ++nextCurr) {
-            if (nextCurr > curr && candidates[nextCurr] == candidates[nextCurr - 1])
+        
+        if(currSum > target){
+            return;
+        }
+        
+        
+        for(int i=index; i<candidates.length; i++){
+            if (i > index && candidates[i] == candidates[i - 1])
                 continue;
-
-            Integer pick = candidates[nextCurr];
-            // optimization: early stopping
-            if (remain - pick < 0)
-                break;
-
-            comb.addLast(pick);
-            backtrack(candidates, comb, remain - pick, nextCurr + 1, results);
-            comb.removeLast();
+            if(currSum + candidates[i] <= target){
+                if(!set.contains(i)){
+                    set.add(i);
+                    currList.add(candidates[i]);
+                    backtrack(candidates, target, currSum+candidates[i],currList, set,i+1);
+                    currList.remove(currList.size()-1);
+                    set.remove(i);
+                }                
+            }    
         }
     }
 }
